--- a/static/css/status_wall_display.css
+++ b/static/css/status_wall_display.css
@@ -22,14 +22,14 @@
 }
 
 #status_wall_display_area ul li div { 
-  width: 100%; 
-  height: 100%; 
+  width: 85%; 
+  height: 85%; 
   padding: 2px;
   border: solid 1px black; 
   background-color: #E0E0E0; 
   text-align: center; 
   font-size: 10px;
-  -webkit-transform: scale(0.75);
+  #-webkit-transform: scale(0.75);
 }
 
 #status_wall_display_area .placeHolder div { 
